# velma_core_ve_body_re_body

rtt_velma_core_ve_body_re_body_msgs/: CMakeLists.txt  package.xml
rtt_velma_core_ve_body_re_body_subsystem_ports/: CMakeLists.txt  package.xml
velma_core_ve_body_re_body_interface/: CMakeLists.txt  package.xml
velma_core_ve_body_re_body_interface/include/velma_core_ve_body_re_body_interface/: command_ports.h  command_ports_new.h  status_ports.h
velma_core_ve_body_re_body_interface/src/: interface.cpp  velma_core_ve_body_re_body_interface.cpp
velma_core_ve_body_re_body_msgs/: CMakeLists.txt  package.xml
velma_core_ve_body_re_body_msgs/msg/: Command.msg  CommandArm.msg  CommandHand.msg  CommandMotor.msg  CommandSimple.msg  Status.msg  StatusArm.msg  StatusArmFriIntf.msg  StatusArmFriRobot.msg  StatusFT.msg  StatusHand.msg  StatusMotor.msg
