<package>
  <name>velma_core_ve_body_re_body_msgs</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <description>

    velma_core_ve_body_re_body_msgs

  </description>
  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>barrett_hand_controller_msgs</build_depend>
  <build_depend>message_generation_subsystem_buffers</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>common_interfaces</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>barrett_hand_controller_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
